# fido-authenticator

./: Cargo.toml  rustfmt.toml
src/: authenticator.rs  constants.rs  credential.rs  credential_management.rs  lib.rs  state.rs  utils.rs
src/authenticator/: credential.rs  credential_management.rs  ctap1.rs  ctap2.rs
src/authenticator/ctap2/: client_pin.rs  credential_mgmt.rs  get_assertion.rs  get_info.rs  large_blobs.rs  make_credential.rs  mod.rs  reset.rs  vendor.rs
