[package]
name = "fido-authenticator"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/solokeys/fido-authenticator"
documentation = "https://docs.rs/fido-authenticator"

[dependencies]
delog = "0.1.0"
heapless = "0.7"
interchange = "0.2.0"
littlefs2 = "0.3.1"
serde = { version = "1.0", default-features = false }
serde_cbor = { version = "0.11.0", default-features = false }
serde-indexed = "0.1.0"

ctap-types = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctap-types", rev = "1f3b995b774aa3d8e4abe14f945049100d1037e3" }
trussed = { git = "https://github.com/trussed-dev/trussed" }

[features]
enable-fido-2-1-pre = []

disable-reset-time-window = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
